<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Mint_100"
    android:padding="20dp"
    tools:context=".LiveTimeActivity" >

    <LinearLayout
        android:id="@+id/titleView_Top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/coinTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/Blue_100"
            android:fontFamily="@font/bungee" />

        <LinearLayout
            android:id="@+id/titleView_Mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tickerDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickerDollar"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tickerWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tickerWon"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/titleView_Bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Flucatate_rate_24H"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticker_Flucatate_rate24H"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Flucatate_24H"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/ticker_Flucatate_won24H"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleNavView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Btn_Transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Btn_Transaction"
                android:textStyle="bold"
                android:background="@color/Mint_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/Btn_OrderBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Btn_OrderBook"
                android:textStyle="bold"
                android:background="@color/Mint_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/Btn_Transaction" />

            <Button
                android:id="@+id/Btn_Community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Btn_Community"
                android:textStyle="bold"
                android:background="@color/Mint_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/Btn_OrderBook" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/Fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>