<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    tools:context=".SelectKoinActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/bungee_inline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_coin"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="-20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CoinRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:padding="10dp"
        android:choiceMode="multipleChoice"
        android:splitMotionEvents="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_Coin_List"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/bungee_inline" />

    <TextView
        android:id = "@+id/List_Selected"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:padding="10dp" />

    <Button
        android:id="@+id/compSelectBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:text="@string/select_complete"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>